force-app/main/default/objects/Case/fields/B2B_Price_Updates__c.field-meta.xml
<CustomField>
    <fullName>B2B_Price_Updates__c</fullName>
    <description>Sales Rep to enter the Product and new Prices.</description>
    <inlineHelpText>Add the Product and new price for the Customer. Product Name - Price</inlineHelpText>
    <label>Price Updates</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>