force-app/main/default/objects/Case/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description>Text field for users to indicate company name when creating a self-registration case for the Grower&apos;s Portal</description>
    <label>Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>