force-app/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email field for grower&apos;s to represent email when creating a self registration case</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>