force-app/main/default/objects/Case/fields/Grower_s_Number__c.field-meta.xml
<CustomField>
    <fullName>Grower_s_Number__c</fullName>
    <label>Grower&apos;s Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>