force-app/main/default/objects/Case/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone field for grower&apos;s to represent phone number when creating a self registration case</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>