force-app/main/default/objects/Case/fields/Preferred_Delivery_Dates__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Delivery_Dates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Linked Preferred Delivery Day record.</inlineHelpText>
    <label>Preferred Delivery Dates</label>
    <referenceTo>B2B_Customer_Delivery_Date__c</referenceTo>
    <relationshipLabel>Preferred Delivery Date Updates</relationshipLabel>
    <relationshipName>Preferred_Delivery_Date_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>