force-app/main/default/objects/Case/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Site Picklist field to indicate which Site the case is a part of - used for Grower&apos;s Portal Inquiry cases on the Grower&apos;s Portal</description>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stockinbingal</fullName>
            </value>
            <value>
                <fullName>Bellata</fullName>
            </value>
            <value>
                <fullName>Manildra</fullName>
            </value>
            <value>
                <fullName>Moree</fullName>
            </value>
            <value>
                <fullName>Bogan Gate</fullName>
            </value>
            <value>
                <fullName>Grong Grong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>