force-app/main/default/objects/Case/recordTypes/B2B_Accounts_Receivable_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>B2B_Accounts_Receivable_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Grower%27s Portal Support Process</businessProcess>
    <description>Record Type to house Accounts Receivable Inquiries, coming in from email to case</description>
    <label>B2B - Accounts Receivable Inquiry</label>
</RecordType>