force-app/main/default/objects/Case/recordTypes/B2B_Order_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>B2B_Order_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Grower%27s Portal Support Process</businessProcess>
    <description>Record Type used to house B2B Order Inquiries coming from Email to Case</description>
    <label>B2B - Order Inquiry</label>
</RecordType>