force-app/main/default/objects/Case/recordTypes/B2B_Price_Change.recordType-meta.xml
<RecordType>
    <fullName>B2B_Price_Change</fullName>
    <active>true</active>
    <businessProcess>Customer Updates</businessProcess>
    <description>Used by Sales Rep when they need to update a price on a price book.</description>
    <label>Price Change</label>
</RecordType>