force-app/main/default/objects/Case/recordTypes/B2B_Price_Request.recordType-meta.xml
<RecordType>
    <fullName>B2B_Price_Request</fullName>
    <active>true</active>
    <businessProcess>Customer Updates</businessProcess>
    <description>Record Type for when the Storefront Customer needs a Price for a Product</description>
    <label>Price Request</label>
</RecordType>