force-app/main/default/objects/Case/recordTypes/B2B_Quality_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>B2B_Quality_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Grower%27s Portal Support Process</businessProcess>
    <description>Record Type to house Quality Inquiries, coming in from email to case</description>
    <label>B2B - Quality Inquiry</label>
</RecordType>