force-app/main/default/objects/Case/recordTypes/B2B_Sales_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>B2B_Sales_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Grower%27s Portal Support Process</businessProcess>
    <description>Record Type to house B2B Sales Inquiries, coming in from email to case</description>
    <label>B2B - Sales Inquiry</label>
</RecordType>