force-app/main/default/objects/Case/recordTypes/B2B_Storefront_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>B2B_Storefront_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Customer Updates</businessProcess>
    <description>Allows Customers to create Cases/Inquiries through the Storefront.</description>
    <label>Storefront Inquiry</label>
</RecordType>