force-app/main/default/objects/Case/recordTypes/B2B_Update_Preferred_Delivery_Date.recordType-meta.xml
<RecordType>
    <fullName>B2B_Update_Preferred_Delivery_Date</fullName>
    <active>true</active>
    <businessProcess>Customer Updates</businessProcess>
    <description>Customer through the Storefront needs to update Preferred Delivery Dates</description>
    <label>Update Preferred Delivery Date</label>
</RecordType>