force-app/main/default/objects/Case/recordTypes/Grower_s_Portal_Broker_Registration.recordType-meta.xml
<RecordType>
    <fullName>Grower_s_Portal_Broker_Registration</fullName>
    <active>true</active>
    <businessProcess>Grower%27s Portal Support Process</businessProcess>
    <description>Record Type used to house Broker Grain Price Access on the Grower&apos;s Portal</description>
    <label>Grower&apos;s Portal Broker Registration</label>
</RecordType>