force-app/main/default/objects/Case/recordTypes/Grower_s_Portal_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Grower_s_Portal_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Grower%27s Portal Support Process</businessProcess>
    <description>Case Record Type for Customer Inquiries for the Grower&apos;s Portal</description>
    <label>Grower&apos;s Portal Inquiry</label>
</RecordType>