force-app/main/default/objects/Case/recordTypes/Grower_s_Portal_Self_Registration.recordType-meta.xml
<RecordType>
    <fullName>Grower_s_Portal_Self_Registration</fullName>
    <active>true</active>
    <businessProcess>Grower%27s Portal Support Process</businessProcess>
    <description>Case Record Type for Grower&apos;s Portal Registration Requests</description>
    <label>Grower&apos;s Portal Self Registration</label>
</RecordType>