force-app/main/default/objects/Case/listViews/Accounts_Receivable_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Accounts_Receivable_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>B2B - Accounts Receivable Queue</label>
    <queue>B2B_Accounts_Receivable_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>