force-app/main/default/objects/Case/listViews/B2B_Sales_Order_Inquiries_Queue_Case.listView-meta.xml
<ListView>
    <fullName>B2B_Sales_Order_Inquiries_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>B2B - Order Inquiries Queue</label>
    <queue>B2B_Order_Inquiries_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>