force-app/main/default/objects/Case/listViews/B2B_Storefront_Inquiries.listView-meta.xml
<ListView>
    <fullName>B2B_Storefront_Inquiries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.B2B_Storefront_Inquiry</value>
    </filters>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Storefront Inquiries</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
        <group>Customer_Service_Group</group>
    </sharedTo>
</ListView>