force-app/main/default/objects/Case/listViews/Customer_Service_Team_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Team_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>B2B - Customer Service Team Queue</label>
    <queue>B2B_Customer_Service_Team_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>