force-app/main/default/objects/Case/listViews/Grower_s_Inquiries.listView-meta.xml
<ListView>
    <fullName>Grower_s_Inquiries</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Site__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Grower_s_Portal_Inquiry</value>
    </filters>
    <label>Grower&apos;s Inquiries</label>
</ListView>