force-app/main/default/objects/Case/listViews/Grower_s_Portal_Inquiry_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Grower_s_Portal_Inquiry_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Grower&apos;s Portal Inquiry Queue</label>
    <queue>Grower_s_Portal_Inquiry_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>