force-app/main/default/objects/Case/listViews/Grower_s_Portal_Registration_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Grower_s_Portal_Registration_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Company_Name__c</columns>
    <columns>Grower_s_Number__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Grower&apos;s Portal Registration Queue</label>
    <queue>Grower_s_Portal_Registration_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>