force-app/main/default/objects/Case/listViews/My_Cases_Growers_Portal.listView-meta.xml
<ListView>
    <fullName>My_Cases_Growers_Portal</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Site__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Grower_s_Portal_Inquiry</value>
    </filters>
    <label>My Cases</label>
</ListView>