force-app/main/default/objects/Case/listViews/Price_Editor_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Price_Editor_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Price Editor Queue</label>
    <queue>Price_Editor_Queue</queue>
    <sharedTo>
        <group>Price_Editor_Group</group>
    </sharedTo>
</ListView>